--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>ubutia | Elements</title>
+    <title>About</title>
     <link
       rel="shortcut icon"
       type="image/x-icon"
@@ -44,7 +44,7 @@
       </div>
     </div>
 
-    <div class="main element">
+    <div class="main ">
       <nav class="navbar navbar-default navbar-ubutia">
         <div class="container">
           <div class="navigation-bar">
@@ -54,7 +54,7 @@
                 <a href="index.html">
                       <span class="ubutia-icon">
                         <img
-                          src="\ubutia-gh-pages\assets\images\lllogo.png"
+                          src="assets\images\lllogo.png"
                           alt="site-logo"
                           width="100px"
                           style="margin-top: -10px"
@@ -104,7 +104,7 @@ Our growth is fueled by a commitment to excellence and collaboration. We don’t
                 <div class="col-sm-3">
                   <div class="ubutia-card">
                     <div class="ubutia-card-header">
-                      <img class="img-responsive" src="https://img.freepik.com/premium-photo/innovation-technology-business-finance-background_31965-2378.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" alt="Value 1" />
+                      <img class="img-responsive"  src="https://img.freepik.com/premium-photo/innovation-technology-business-finance-background_31965-2378.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" alt="Value 1" />
                     </div>
                     <div class="ubutia-card-content">
                       <h3 style="color: black;">Innovation</h3>
@@ -126,7 +126,7 @@ Our growth is fueled by a commitment to excellence and collaboration. We don’t
                 <div class="col-sm-3">
                   <div class="ubutia-card">
                     <div class="ubutia-card-header">
-                      <img class="img-responsive" src="https://img.freepik.com/premium-photo/business-teamwork-meeting-success-achievement-goal_42957-2564.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" alt="Value 3" />
+                      <img class="img-responsive" src="https://img.freepik.com/free-photo/satisfied-businessman-company-employer-wearing-suit-handshake-new-employee-get-hired-job-interview-man-hr-manager-employ-successful-candidate-shake-hand-business-meeting-placement-concept_482257-5113.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" alt="Value 3" height="150em"/>
                     </div>
                     <div class="ubutia-card-content">
                       <h3 style="color: black;">Collaboration</h3>
@@ -179,7 +179,7 @@ Our growth is fueled by a commitment to excellence and collaboration. We don’t
                 <div class="col-sm-4">
                   <div class="ubutia-card">
                     <div class="ubutia-card-header">
-                      <img class="img-responsive" src="https://img.freepik.com/premium-photo/hands-holding-smartphone-social-media-concept_23-2150208263.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" />
+                      <img class="img-responsive" src="https://img.freepik.com/premium-vector/poster-with-words-digital-marketing-it_823925-2306.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" />
                     </div>
                     <div class="ubutia-card-content">
                         <h3 style="color: black;">Digital Marketing</h3>
