--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>ubutia | Elements</title>
+        <title>Blog</title>
         <link rel="shortcut icon" type="image/x-icon" href="assets/images/logo-icon.png"/>
 
         <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -38,7 +38,7 @@
         </ul>
             </div>
         </div>
-        <div class="main element">
+        <div class="main ">
             <nav class="navbar navbar-default navbar-ubutia">
                 <div class="container">
                     <div class="navigation-bar">
@@ -68,11 +68,11 @@
                 <div class="row" style="display: flex; flex-wrap: wrap; gap: 30px; justify-content: center;">
                     <!-- Blog Card 1 -->
                     <div class="card" style="width: 320px; margin-bottom: 30px; box-shadow: 0 4px 12px rgba(0,0,0,0.08); border-radius: 12px; overflow: hidden;">
-                        <img src="https://img.freepik.com/free-photo/creative-website-template-design_23-2148812196.jpg?w=740" alt="Blog 1" style="width:100%; height:180px; object-fit:cover;">
+                        <img src="https://img.freepik.com/free-photo/creative-website-template-design_23-2148812196.jpg?w=740" alt="Blog 1" style="width:100%; height:180px; object-fit:cover;" >
                         <div style="padding: 20px;">
                             <h3 style="margin-top:0;">How to Build a Modern Website</h3>
-                            <p style="color:#666;">Learn the essential steps and tools for building a responsive, modern website in 2024.</p>
-                            <a href="#" class="btn ubutia-btn small-btn">Read More</a>
+                            <p style="color:#666;">Learn the essential steps and tools for building a responsive, modern website in 2025.</p>
+                            <a href="build-website.html" class="btn ubutia-btn small-btn">Read More</a>
                         </div>
                     </div>
                     <!-- Blog Card 2 -->
@@ -81,7 +81,7 @@
                         <div style="padding: 20px;">
                             <h3 style="margin-top:0;">Top 5 Graphic Design Trends</h3>
                             <p style="color:#666;">Discover the latest trends in graphic design that will make your brand stand out this year.</p>
-                            <a href="#" class="btn ubutia-btn small-btn">Read More</a>
+                            <a href="graphic-trend.html" class="btn ubutia-btn small-btn">Read More</a>
                         </div>
                     </div>
                     <!-- Blog Card 3 -->
@@ -90,7 +90,7 @@
                         <div style="padding: 20px;">
                             <h3 style="margin-top:0;">SEO Basics for Beginners</h3>
                             <p style="color:#666;">A beginner's guide to understanding and implementing SEO for your website or blog.</p>
-                            <a href="#" class="btn ubutia-btn small-btn">Read More</a>
+                            <a href="seo-basics.html" class="btn ubutia-btn small-btn">Read More</a>
                         </div>
                     </div>
                     <!-- Blog Card 4 -->
@@ -99,7 +99,7 @@
                         <div style="padding: 20px;">
                             <h3 style="margin-top:0;">Digital Marketing Essentials</h3>
                             <p style="color:#666;">Explore the must-know digital marketing strategies for small businesses and startups.</p>
-                            <a href="#" class="btn ubutia-btn small-btn">Read More</a>
+                            <a href="dm-essentials.html" class="btn ubutia-btn small-btn">Read More</a>
                         </div>
                     </div>
                     <!-- Blog Card 5 -->
@@ -108,7 +108,7 @@
                         <div style="padding: 20px;">
                             <h3 style="margin-top:0;">Branding for Startups</h3>
                             <p style="color:#666;">Tips and tricks for building a memorable brand identity from scratch.</p>
-                            <a href="#" class="btn ubutia-btn small-btn">Read More</a>
+                            <a href="branding-startups.html" class="btn ubutia-btn small-btn">Read More</a>
                         </div>
                     </div>
                 </div>
