--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>ubutia | Elements</title>
+    <title>Contact</title>
     <link
       rel="shortcut icon"
       type="image/x-icon"
@@ -42,7 +42,7 @@
         </ul>
       </div>
     </div>
-    <div class="main element">
+    <div class="main ">
       <nav class="navbar navbar-default navbar-ubutia">
         <div class="container">
           <div class="navigation-bar">
