--- a/digital-marketing.html
+++ b/digital-marketing.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>StreamArtisan | Digital Marketing</title>
+    <title>Digital Marketing</title>
     <link
       rel="shortcut icon"
       type="image/x-icon"
