--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>streamartisian | Home</title>
+    <title>Home</title>
     <link
       rel="shortcut icon"
       type="image/x-icon"
@@ -21,12 +21,130 @@
     <link href="assets/css/magnific-popup.css" rel="stylesheet" />
 
     <link href="assets/css/style.css" rel="stylesheet" />
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
+  <style>
+    .intro {
+  flex: 1;
+  padding-right: 2.5rem;
+}
+
+.intro h1 {
+  font-size: 2.8rem;
+  color: #e62727;
+  margin-bottom: 0.5rem;
+  line-height: 1.2;
+}
+
+.intro .subheading {
+  font-size: 1.5rem;
+  color: #007bff;
+  margin-bottom: 1rem;
+  font-weight: 500;
+}
+
+.intro p {
+  font-size: 1.1rem;
+  color: white;
+  margin-bottom: 2rem;
+  line-height: 1.6;
+}
+
+.ubutia-btn {
+  display: inline-block;
+  padding: 0.9rem 2rem;
+  background: linear-gradient(45deg, #007bff, #00d4ff);
+  color: #ffffff;
+  text-decoration: none;
+  border-radius: 50px;
+  font-weight: 700;
+  transition: background 0.3s ease, transform 0.2s ease;
+}
+
+.ubutia-btn:hover {
+  background: linear-gradient(45deg, #0056b3, #00aaff);
+  transform: scale(1.05);
+}
+
+.intro-box img {
+  flex: 1;
+  max-width: 35%;
+  height: auto;
+  object-fit: contain;
+  background: transparent;
+}
+
+.service-icons {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  margin-top: 1.5rem;
+}
+
+.icon-item {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  font-size: 1rem;
+  color: white;
+}
+
+.icon-item i {
+  font-size: 1.5rem;
+  color: #007bff;
+  transition: color 0.3s ease;
+}
+
+.icon-item:hover i {
+  color: #0056b3;
+}
+
+@media (max-width: 768px) {
+  .intro-box {
+    flex-direction: column;
+    text-align: center;
+    padding: 2rem;
+  }
+
+  .intro {
+    padding-right: 0;
+    margin-bottom: 2rem;
+  }
+
+  .intro h1 {
+    font-size: 2.2rem;
+  }
+
+  .intro .subheading {
+    font-size: 1.2rem;
+  }
+
+  .intro p {
+    font-size: 1rem;
+  }
+
+  .intro-box img {
+    max-width: 70%;
+  }
+
+  .service-icons {
+    justify-content: center;
+  }
+}
+
+@keyframes fadeIn {
+  0% { opacity: 0; transform: translateY(20px); }
+  100% { opacity: 1; transform: translateY(0); }
+}
+
+.intro-box {
+  animation: fadeIn 1.5s ease-in-out;
+}
+  </style>
   <body>
     <div id="menu-item" class="menu-item hide-menu">
       <div class="container">
@@ -73,20 +191,37 @@
         <div class="container">
           <div class="row">
             <div class="intro-box">
-              <div class="intro">
-                <h1>We make ideas become a reality</h1>
-                <p>Creative digital agency based Internationally</p>
-                <a class="btn ubutia-btn" href="contact.html">Explore us</a>
-              </div>
-            </div>
+             <div class="intro">
+        <h1>Transforming Ideas into Digital Excellence</h1>
+        <h2 class="subheading">Innovative Software House & Digital Marketing Solutions</h2>
+        <p>We are a global software house specializing in social media marketing, web development, mobile apps, and UI/UX design. Let us bring your vision to life with cutting-edge technology and creative strategies.</p>
+        <a class="btn ubutia-btn" href="contact.html" aria-label="Explore Our Software House and Digital Marketing Services">Get Started Now</a>
+        <div class="service-icons">
+          <div class="icon-item">
+            <i class="fas fa-bullhorn"></i>
+            <span>Social Media Marketing</span>
+          </div>
+          <div class="icon-item">
+            <i class="fas fa-code"></i>
+            <span>Web Development</span>
+          </div>
+          <div class="icon-item">
+            <i class="fas fa-mobile-alt"></i>
+            <span>Mobile Apps</span>
+          </div>
+          <div class="icon-item">
+            <i class="fas fa-paint-brush"></i>
+            <span>UI/UX Design</span>
           </div>
         </div>
-      </header>
-      <section id="about" class="about section">
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-8 col-sm-offset-2">
-              <h2 class="title">About agency</h2>
+      </div>
+    </div>
+  </header>
+  <section id="about" class="about section">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+          <h2 class="title">About agency</h2>
               <p>
                 We are a team of passionate engineers and creative
                 problem-solvers dedicated to building smart, scalable software
@@ -228,7 +363,7 @@
           </div>
         </div>
       </section>
-      <section id="workstation" class="work section">
+      <section id="workstation" class="work section" >
         <div class="container">
           <h2 class="title">Our workstations</h2>
           <div id="workstation-slider" class="owl-carousel">
