few more changes in the homepage

--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
                   <a href="index.html">
                     <span class="ubutia-icon">
                       <img
-                        src="\ubutia-gh-pages\assets\images\lllogo.png"
+                        src="assets\images\lllogo.png"
                         alt="site-logo"
                         width="100px"
                         style="margin-top: -10px"
