--- a/graphic-designing.html
+++ b/graphic-designing.html
@@ -8,14 +8,14 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="./assets/images/logo-icon.png"
+      href="assets/images/logo-icon.png"
     />
-    <link href="./assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="./assets/css/bootstrap-theme.min.css" rel="stylesheet" />
-    <link href="./assets/css/owl.carousel.css" rel="stylesheet" />
-    <link href="./assets/css/owl.theme.default.min.css" rel="stylesheet" />
-    <link href="./assets/css/magnific-popup.css" rel="stylesheet" />
-    <link href="./assets/css/style.css" rel="stylesheet" />
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="assets/css/bootstrap-theme.min.css" rel="stylesheet" />
+    <link href="assets/css/owl.carousel.css" rel="stylesheet" />
+    <link href="assets/css/owl.theme.default.min.css" rel="stylesheet" />
+    <link href="assets/css/magnific-popup.css" rel="stylesheet" />
+    <link href="assets/css/style.css" rel="stylesheet" />
     <link rel="stylesheet" href="./assets/css/gd.css" />
     <!-- Font Awesome for icons -->
     <link
