--- a/ebook.html
+++ b/ebook.html
@@ -8,16 +8,16 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="./assets/images/logo-icon.png"
+      href="assets/images/logo-icon.png"
     />
-    <link href="./assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="./assets/css/bootstrap-theme.min.css" rel="stylesheet" />
-    <link href="./assets/css/owl.carousel.css" rel="stylesheet" />
-    <link href="./assets/css/owl.theme.default.min.css" rel="stylesheet" />
-    <link href="./assets/css/magnific-popup.css" rel="stylesheet" />
-    <link href="./assets/css/style.css" rel="stylesheet" />
-    <link rel="stylesheet" href="./assets/css/gd.css" />
-    <link rel="stylesheet" href="./assets/css/ebook.css" />
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="assets/css/bootstrap-theme.min.css" rel="stylesheet" />
+    <link href="assets/css/owl.carousel.css" rel="stylesheet" />
+    <link href="assets/css/owl.theme.default.min.css" rel="stylesheet" />
+    <link href="assets/css/magnific-popup.css" rel="stylesheet" />
+    <link href="assets/css/style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="assets/css/gd.css" />
+    <link rel="stylesheet" href="assets/css/ebook.css" />
     <!-- Font Awesome for icons -->
     <link
       rel="stylesheet"
@@ -54,7 +54,7 @@
                   <a href="index.html">
                     <span class="ubutia-icon">
                       <img
-                        src="./assets/images/lllogo.png"
+                        src="assets/images/lllogo.png"
                         alt="site-logo"
                         width="100px"
                         style="margin-top: -10px"
