--- a/terms.html
+++ b/terms.html
@@ -10,12 +10,12 @@
       type="image/x-icon"
       href="./assets/images/logo-icon.png"
     />
-    <link href="./assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="./assets/css/bootstrap-theme.min.css" rel="stylesheet" />
-    <link href="./assets/css/owl.carousel.css" rel="stylesheet" />
-    <link href="./assets/css/owl.theme.default.min.css" rel="stylesheet" />
-    <link href="./assets/css/magnific-popup.css" rel="stylesheet" />
-    <link href="./assets/css/style.css" rel="stylesheet" />
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="assets/css/bootstrap-theme.min.css" rel="stylesheet" />
+    <link href="assets/css/owl.carousel.css" rel="stylesheet" />
+    <link href="assets/css/owl.theme.default.min.css" rel="stylesheet" />
+    <link href="assets/css/magnific-popup.css" rel="stylesheet" />
+    <link href="assets/css/style.css" rel="stylesheet" />
     <link rel="stylesheet" href="./assets/css/gd.css" />
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
@@ -48,7 +48,7 @@
                   <a href="index.html">
                     <span class="ubutia-icon">
                       <img
-                        src="./assets/images/lllogo.png"
+                        src="assets/images/lllogo.png"
                         alt="site-logo"
                         width="100px"
                         style="margin-top: -10px"
