alignment issues addressed

--- a/index.html
+++ b/index.html
@@ -225,22 +225,22 @@
           </div>
         </div>
       </header>
-      <section id="about" class="about section">
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-8 col-sm-offset-2">
-              <h2 class="title">About agency</h2>
-              <p>
-                We are a team of passionate engineers and creative
-                problem-solvers dedicated to building smart, scalable software
-                solutions. From web and mobile applications to AI-driven systems
-                and enterprise platforms, we help businesses harness technology
-                to innovate, grow, and thrive in a digital world.
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
+     <section id="about" class="about section">
+  <div class="container">
+    <div class="row" style="display: flex; justify-content: center;">
+      <div class="col-sm-8 col-sm-offset-2" style="margin-left: 0;">
+        <h2 class="title">About agency</h2>
+        <p>
+          We are a team of passionate engineers and creative
+          problem-solvers dedicated to building smart, scalable software
+          solutions. From web and mobile applications to AI-driven systems
+          and enterprise platforms, we help businesses harness technology
+          to innovate, grow, and thrive in a digital world.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
      <section class="purpose section">
   <div class="container">
     <h2 class="title">What we do</h2>
@@ -824,67 +824,50 @@
           </div>
         </div>
       </section> -->
-      <section id="contact" class="contact section">
-        <div class="container">
-          <h2 class="title">Feel Free To Reachout</h2>
-          <div class="row">
-            <div class="col-sm-4">
-              <div class="ubutia-card">
-                <div class="ubutia-card-header">
-                  <span class="fa fa-map-o" aria-hidden="true"></span>
-                </div>
-                <div class="ubutia-card-content">
-                  <h3>Address</h3>
-                  <p>
-                    Stream Artisan Corporation 418 Broadway #5981 Albany, NY,
-                    12207
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-4">
-              <div class="ubutia-card">
-                <div class="ubutia-card-header">
-                  <span class="fa fa-phone" aria-hidden="true"></span>
-                </div>
-                <div class="ubutia-card-content">
-                  <h3>Phone</h3>
-                  <p>+13323731192</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-4">
-              <div class="ubutia-card">
-                <div class="ubutia-card-header">
-                  <span class="fa fa-paper-plane" aria-hidden="true"></span>
-                </div>
-                <div class="ubutia-card-content">
-                  <h3>Email</h3>
-                  <a href="mailto:services@streamartisan.com"
-                    >services@streamartisan.com</a
-                  >
-                  <!-- <p>support@streamartisian.com</p> -->
-                </div>
-              </div>
-            </div>
-            <!-- <div class="col-sm-12">
-              <div class="social-icons">
-                <ul>
-                  <a href="#"
-                    ><li><span class="ion-social-facebook"></span></li
-                  ></a>
-                  <a href="#"
-                    ><li><span class="ion-social-twitter"></span></li
-                  ></a>
-                  <a href="#"
-                    ><li><span class="ion-social-pinterest"></span></li
-                  ></a>
-                </ul>
-              </div>
-            </div> -->
-          </div>
+     <section id="contact" class="contact section py-16 bg-gray-100">
+  <div class="container mx-auto px-4">
+    <h2 class="title text-4xl font-bold text-center mb-12 text-gray-800">Get in Touch</h2>
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-12">
+      <!-- Address Card -->
+      <div class="bg-white rounded-lg shadow-lg p-6 text-center transform hover:scale-105 transition-transform duration-300">
+        <div class="mb-4">
+          <span class="fa fa-map-marker text-3xl text-blue-600" aria-hidden="true"></span>
         </div>
-      </section>
+        <h3 class="text-xl font-semibold mb-2">Address</h3>
+        <p class="text-gray-600">
+          Stream Artisan Corporation<br>
+          418 Broadway #5981<br>
+          Albany, NY, 12207
+        </p>
+      </div>
+      <!-- Phone Card -->
+      <div class="bg-white rounded-lg shadow-lg p-6 text-center transform hover:scale-105 transition-transform duration-300">
+        <div class="mb-4">
+          <span class="fa fa-phone text-3xl text-blue-600" aria-hidden="true"></span>
+        </div>
+        <h3 class="text-xl font-semibold mb-2">Phone</h3>
+        <p class="text-gray-600">
+          <a href="tel:+13323731192" class="hover:text-blue-600 transition-colors">+1 (332) 373-1192</a>
+        </p>
+      </div>
+      <!-- Email Card -->
+      <div class="bg-white rounded-lg shadow-lg p-6 text-center transform hover:scale-105 transition-transform duration-300">
+        <div class="mb-4">
+          <span class="fa fa-paper-plane text-3xl text-blue-600" aria-hidden="true"></span>
+        </div>
+        <h3 class="text-xl font-semibold mb-2">Email</h3>
+        <p class="text-gray-600">
+          <a href="mailto:services@streamartisan.com" class="hover:text-blue-600 transition-colors">services@streamartisan.com</a>
+        </p>
+      </div>
+    </div>
+   
+  </div>
+</section>
+
+<!-- Add Tailwind CSS and Font Awesome CDNs -->
+<link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
       <footer class="footer">
         <div class="container">
           <div class="row">
