--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
         font-size: 14px;
         line-height: 1.5;
       }
-      .glowing-star {
+      /* .glowing-star {
         position: absolute;
         width: 10px;
         height: 10px;
@@ -410,7 +410,7 @@
         border-radius: 50%;
         animation: glow 1.5s ease-in-out infinite alternate;
         box-shadow: 0 0 10px #ffd700;
-      }
+      } */
       @keyframes glow {
         from {
           transform: scale(1);
