--- a/about.html
+++ b/about.html
@@ -77,9 +77,10 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
-            <div class="banner">
+            <!-- Remove the green bar and yellow stars (banner and glowing stars) -->
+            <!-- <div class="banner">
               <h2 class="title mt80">About Us</h2>
-            </div>
+            </div> -->
           </div>
           <div class="col-sm-12">
             <div class="about-content">
